# Human_Digital_twin

./: .env  .gitignore  Dockerfile  Makefile  README.md  bioprocess_flow_diagram.md  calibrate_model.py  docker-compose.yml  generate_config.py  mypy.ini  pyproject.toml  requirements.txt  run_app.sh  setup.cfg  setup.py  setup.sh
.github/workflows/: ci.yml
.hypothesis/constants/: 0881e6c6aeba5dec  1b36d7a9bbd8db37  1ca3fb719572a01b  20694d40930a3459  26361877d744e1fc  286545839cb3b828  3db6fa31f90aa958  400a0d7386b22909  408f4da7ec160919  4a103d075bd54118  4c7cff449ab3a535  4d88f6b19800747b  56fab5ca1e10d129  6e1f9f27627df955  6e7f4343b17dc755  70031da89a9d563c  7aabc317dd97df21  8a341ace0253109a  9b49805cc02ca193  ad7706e6d0b26baa  bc1f4d5009a7157c  bd819854d4a368ce  bf09dc7eea390194  c24c710b273a71e3  (+10 more)
calibration_logs/: last_run.json
data/: baseline_states.yaml  sample_apple_health.json  sample_inputs.json
hdt/: __init__.py  cli.py  config_loader.py  main.py  simulator.py
hypothesis/: __init__.py  strategies.py
numpy/: __init__.py  _init_.py
tests/: sleep_regulation_centre.py  test_all_units.py  test_calibration.py  test_full_sim.py  test_gut_reactor.py  test_input_parser.py  test_input_processing.py  test_input_validator.py  test_liver_metabolic_router.py  test_load_env.py  test_muscle_effector.py  test_new_simulator.py  test_ode_solver.py  test_parser.py  test_recommender.py  test_rule_engine.py  test_signal_normalizer.py  test_sim_clock.py  test_simulator.py  test_stream.py  test_time_manager.py
utils/: config_loader.py  env_utils.py  logging_utils.py
(+50 files in other folders)
